--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URL=mongodb://localhost:27017
+#MONGO_URL=mongodb://localhost:27017
+MONGO_URL=mongodb+srv://kainatshehzadi765:KainatShehzadi.123@cluster0.mewgune.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
